# gha-reusable-workflows-experiment

./: .gitignore  CMakeLists.txt  licence.md  readme.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  readme.md
example/: CMakeLists.txt
example/src/: main.cpp
include/grwe/: grwe.h
src/: CMakeLists.txt
src/grwe/: grwe.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
